--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -1528,7 +1528,7 @@ msgstr "Yn anffodus, nid yw’r gwasanaeth ar gael"
 msgid "The rate limit for this page has been exceeded. Please try again later"
 msgstr ""
 "Aethpwyd y tu hwnt i derfyn y gyfradd ar gyfer y dudalen hon. Rhowch "
-"gynnig arall arni hwyrach ymlaen"
+"gynnig arall arni hwyrach ymlaen."
 
 #: grc/templates/document-checker/currently_in_a_partnership.html:7
 #: grc/templates/document-checker/currently_in_a_partnership.html:25
