--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-21 14:06+0100\n"
+"POT-Creation-Date: 2024-05-21 14:42+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -1518,6 +1518,17 @@ msgstr ""
 "Os yw cyfeiriad y wefan yn gywir, neu os gwnaethoch glicio ar ddolen neu "
 "fotwm, cysylltwch â'r tîm gweinyddol os oes angen help arnoch gyda'ch "
 "cais."
+
+#: grc/templates/custom-error-templates/429.html:4
+#: grc/templates/custom-error-templates/429.html:11
+msgid "Sorry, the service is unavailable"
+msgstr "Yn anffodus, nid yw’r gwasanaeth ar gael"
+
+#: grc/templates/custom-error-templates/429.html:14
+msgid "The rate limit for this page has been exceeded. Please try again later."
+msgstr ""
+"Aethpwyd y tu hwnt i derfyn y gyfradd ar gyfer y dudalen hon. Rhowch "
+"gynnig arall arni hwyrach ymlaen."
 
 #: grc/templates/document-checker/currently_in_a_partnership.html:7
 #: grc/templates/document-checker/currently_in_a_partnership.html:25
