RST 6673 translate content default error page

--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-22 11:35+0100\n"
+"POT-Creation-Date: 2024-05-22 13:21+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -1533,9 +1533,23 @@ msgstr ""
 "gynnig arall arni hwyrach ymlaen."
 
 #: grc/templates/custom-error-templates/503.html:14
+#: grc/templates/custom-error-templates/error-default.html:20
 #: grc/templates/start-application/application-already-submitted.html:25
 msgid "Contact the admin team if you need help with your application."
 msgstr "Cysylltwch â'r tîm gweinyddol os oes angen help arnoch gyda'ch cais."
+
+#: grc/templates/custom-error-templates/error-default.html:4
+#: grc/templates/custom-error-templates/error-default.html:11
+msgid "Sorry, there is a problem with the service"
+msgstr "Mae'n ddrwg gennym, mae problem gyda'r gwasanaeth"
+
+#: grc/templates/custom-error-templates/error-default.html:14
+msgid "Please try again later."
+msgstr "Rhowch gynnig arall arni hwyrach ymlaen."
+
+#: grc/templates/custom-error-templates/error-default.html:17
+msgid "We have saved your answers. They will be available for 6 months."
+msgstr "Rydym wedi cadw eich atebion. Cedwir yr wybodaeth am 6 mis."
 
 #: grc/templates/document-checker/currently_in_a_partnership.html:7
 #: grc/templates/document-checker/currently_in_a_partnership.html:25
