--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -1467,9 +1467,9 @@ msgid ""
 "British Consul or High Commission, or under Merchant Shipping or Civil "
 "Aviation provisions?"
 msgstr ""
-"Dewiswch os cafodd eich genedigaeth ei chofrestru gan wasanaeth "
-"cofrestru’r Lluoedd, neu gan Gonswl Prydeinig neu Uchel Gomisiwn, neu dan"
-" ddarpariaethau Llongau Masnach neu Hedfan Sifil"
+"A oedd eich genedigaeth wedi’i chofrestru gan wasanaeth cofrestru y "
+"Lluoedd, neu gyda Chonswl Prydeinig neu Uwch Gomisiwn, neu dan "
+"ddarpariaethau Llongau Masnach neu Hedfan Sifil?"
 
 #: grc/templates/birth-registration/forces.html:29
 msgid "This information will help us locate your original birth record."
@@ -4640,18 +4640,4 @@ msgid ""
 msgstr ""
 "i ganfod pa ddatganiad sy’n briodol i’ch sefyllfa chi a phwy all "
 "weithredu fel tyst pan fyddwch yn llofnodi eich datganiad."
-
-#~ msgid ""
-#~ "Was your birth registered by a "
-#~ "Forces registering service, or with a"
-#~ " British Consul or\n"
-#~ "                              High Commission, or"
-#~ " under Merchant Shipping or Civil "
-#~ "Aviation provisions?"
-#~ msgstr ""
-#~ "A oedd eich genedigaeth wedi’i "
-#~ "chofrestru gan wasanaeth cofrestru y "
-#~ "Lluoedd, neu gyda Chonswl Prydeinig neu"
-#~ " Uwch Gomisiwn, neu dan ddarpariaethau "
-#~ "Llongau Masnach neu Hedfan Sifil?"
 
