--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -4580,7 +4580,7 @@ msgstr "Gallwch uwchlwytho:"
 
 #: grc/templates/upload/overseas-certificate.html:6
 #: grc/templates/upload/overseas-certificate.html:19
-msgid "Overseas gender recognition certificate documents"
+msgid "Upload overseas gender recognition certificate documents"
 msgstr "Dogfennau tystysgrif cydnabod rhywedd tramor"
 
 #: grc/templates/upload/overseas-certificate.html:22
@@ -4601,8 +4601,8 @@ msgstr "os ydych ar y llwybr tramor (yn agor mewn tab newydd)"
 
 #: grc/templates/upload/statutory-declarations.html:6
 #: grc/templates/upload/statutory-declarations.html:19
-msgid "Statutory declarations documents"
-msgstr "Dogfennau datganiadau statudol"
+msgid "Upload statutory declarations documents"
+msgstr "Uwchlwytho dogfennau datganiadau statudol"
 
 #: grc/templates/upload/statutory-declarations.html:22
 msgid ""
