--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -997,14 +997,6 @@ msgstr ""
 "Dewiswch os hoffech chi i ni ddweud wrth HMRC ar ôl i chi gael eich "
 "Tystysgrif Cydnabod Rhywedd"
 
-#: grc/business_logic/constants/start_application.py:6
-msgid "Yes, and I have my reference number"
-msgstr "Ydw, ac mae gennyf fy nghyfeirnod"
-
-#: grc/business_logic/constants/start_application.py:7
-msgid "Yes, but I have lost my reference number"
-msgstr "Ydw, ond rwyf wedi colli fy nghyfeirnod"
-
 #: grc/business_logic/constants/submit_and_pay.py:8
 msgid "No, I will pay now"
 msgstr "Nac ydw, mi wnaf dalu’r ffi nawr"
@@ -3978,18 +3970,6 @@ msgstr ""
 "Y rheswm dros hyn yw er mwyn i ni allu cadw eich cais ac i chi allu "
 "dychwelyd i’ch cais yn hwyrach ymlaen"
 
-#: grc/templates/start-application/email-address.html:23
-msgid ""
-"If this is your first time using this service, we will give you a "
-"reference number"
-msgstr ""
-"Os mai hwn yw’r tro cyntaf i chi ddefnyddio’r gwasanaeth hwn, byddwn yn "
-"rhoi cyfeirnod i chi"
-
-#: grc/templates/start-application/email-address.html:24
-msgid "You will need this if you return to your application"
-msgstr "Byddwch angen hwn os byddwch yn dychwelyd i’ch cais"
-
 #: grc/templates/start-application/email-address.html:27
 msgid ""
 "If you are returning to your application, you will need your application "
@@ -3999,14 +3979,6 @@ msgstr "Os ydych yn dychwelyd i’ch cais, byddwch angen cyfeirnod eich cais"
 #: grc/templates/start-application/email-address.html:28
 msgid "If you have lost or forgotten it, you can start a new application"
 msgstr "Os ydych wedi’i golli neu ei anghofio, gallwch ddechrau cais newydd"
-
-#: grc/templates/start-application/email-address.html:32
-msgid "Before you start, make sure you have read the guidance on"
-msgstr "Cyn i chi ddechrau gwnewch yn siŵr eich bod wedi darllen y cyfarwyddyd ar"
-
-#: grc/templates/start-application/email-address.html:34
-msgid "applying for a Gender Recognition Certificate (opens in a new tab)"
-msgstr "wneud cais am Dystysgrif Cydnabod Rhywedd (yn agor mewn tab newydd)"
 
 #: grc/templates/start-application/is-first-visit.html:8
 #: grc/templates/start-application/is-first-visit.html:31
@@ -4656,4 +4628,48 @@ msgid ""
 msgstr ""
 "i ganfod pa ddatganiad sy’n briodol i’ch sefyllfa chi a phwy all "
 "weithredu fel tyst pan fyddwch yn llofnodi eich datganiad."
+
+#: grc/templates/one-login/start.html
+msgid "Start or return to an application"
+msgstr "Dechrau cais newydd neu ddychwelyd i gais"
+
+#: grc/templates/one-login/start.html
+msgid "You’ll need a <a href=\"https://www.gov.uk/using-your-gov-uk-one-login/services\" target=\"_blank\" class=\"govuk-link\">GOV.UK One Login</a> to start a new application or return to your application that was started with GOV.UK One Login."
+msgstr "Bydd arnoch angen cyfrif <a href=\"https://www.gov.uk/apply-gender-recognition-certificate\" target=\"_blank\" class=\"govuk-link\">GOV.UK One Login</a> er mwyn dechrau cais newydd neu ddychwelyd i’ch cais a ddechreuwyd gyda One Login GOV.UK."
+
+#: grc/templates/one-login/start.html
+msgid "If this is your first time using this service, we will give you a reference number. You will need this if you return to your application."
+msgstr Os mai hwn yw’r tro cyntaf i chi ddefnyddio’r gwasanaeth hwn, byddwn yn rhoi cyfeirnod i chi. Byddwch angen hwn os byddwch yn dychwelyd i’ch cais."
+
+#: grc/templates/one-login/start.html
+msgid "If you are returning to your application which was not started with GOV.UK One Login, you will also need to enter your email address and security code."
+msgstr "Os ydych chi’n dychwelyd i’ch cais na ddechreuwyd gyda One Login GOV.UK, bydd angen i chi hefyd nodi’ch cyfeiriad e-bost a’ch cod diogelwch."
+
+#: grc/templates/one-login/start.html
+msgid "Before you start a new application, make sure you have read the guidance on <a href='https://www.gov.uk/apply-gender-recognition-certificate' target='_blank' class='govuk-link'>applying for a Gender Recognition Certificate (opens in a new tab)</a>."
+msgstr "Cyn i chi ddechrau gwnewch yn siŵr eich bod wedi darllen y cyfarwyddyd ar <a href='https://www.gov.uk/apply-gender-recognition-certificate' target='_blank' class='govuk-link'>wneud cais am Dystysgrif Cydnabod Rhywedd (yn agor mewn tab newydd)</a>."
+
+#: grc/templates/one-login/start.html
+msgid "Start a new application"
+msgstr "Dechrau cais newydd"
+
+#: grc/templates/one-login/start.html
+msgid "Return to your existing application"
+msgstr "Dychwelyd i’ch cais presennol"
+
+#: grc/templates/one-login/referenceNumber.html
+msgid "I have my reference number"
+msgstr "Mae gennyf fy nghyfeirnod"
+
+#: grc/templates/one-login/referenceNumber.html
+msgid "I have lost my reference number"
+msgstr "Rwyf wedi colli fy nghyfeirnod"
+
+#: grc/templates/one-login/referenceNumber.html
+msgid "Application reference number"
+msgstr "Welsh translation"
+
+#: grc/templates/start-application/email-address.html
+msgid "You need to provide an email address to continue your application so we can save your progress and you can exit and return to your application later."
+msgstr "Welsh translation"
 
